[gd_scene load_steps=2 format=3 uid="uid://bhv23lgjc53vt"]

[ext_resource type="Script" path="res://lib/list.gd" id="1_cltgf"]

[node name="List" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cltgf")

[node name="Builder" type="Node2D" parent="."]

[node name="Items" type="ItemList" parent="Builder"]
offset_right = 384.0
offset_bottom = 280.0

[node name="New" type="Button" parent="Builder"]
offset_left = 400.0
offset_right = 464.0
offset_bottom = 40.0
text = "New
"

[node name="Delete" type="Button" parent="Builder"]
offset_left = 400.0
offset_top = 48.0
offset_right = 464.0
offset_bottom = 88.0
text = "Delete"

[node name="Path" type="TextEdit" parent="Builder"]
offset_left = 472.0
offset_top = 96.0
offset_right = 728.0
offset_bottom = 136.0
placeholder_text = "TSCN file"

[node name="Browse" type="Button" parent="Builder"]
offset_left = 400.0
offset_top = 96.0
offset_right = 466.0
offset_bottom = 136.0
text = "Browse"

[node name="BrowseDialog" type="FileDialog" parent="Builder"]
title = "Open a File"
size = Vector2i(611, 500)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn ; TSCN")

[connection signal="pressed" from="Builder/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Builder/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Builder/Browse" to="." method="_on_browse_pressed"]
[connection signal="file_selected" from="Builder/BrowseDialog" to="." method="_on_browse_dialog_file_selected"]
